# minik8s

./: .gitignore  README.md  task.md
agent/: CMakeLists.txt  README.md  main.cpp  todo.md
agent/proto/: node_agent.cpp
agent/src/: main.cpp  node_agent.cpp  node_agent.h  node_info.cpp  node_info.h  pod.h  pod_manager.cpp  pod_manager.h  process_runner.cpp  process_runner.h  utils.h
server/: go.mod  go.sum
server/cmd/apiserver/: main.go
server/cmd/gateway/: main.go
server/internal/config/: config.go
server/internal/grpcserver/: apisrv.go
server/internal/httpserver/: httpserver.go
server/internal/pb/proto/: minik8s.pb.go  minik8s_grpc.pb.go
server/internal/scheduler/: scheduler.go
server/internal/store/: badger_store.go  store.go
server/proto/: minik8s.proto
web/: README.md  package-lock.json  package.json
web/src/: index.css  main.tsx
web/src/app/: app.tsx  layout.tsx
web/src/app/provider/: auth.provider.tsx
web/src/app/router/: config.tsx  router.tsx
web/src/components/: container.tsx  header.tsx  logo.tsx  metric-card.tsx  progress.tsx  sidebar.tsx
web/src/components/nodes/: node.element.tsx  node.list.tsx  node.widget.tsx
web/src/components/ui/: switcher.tsx
web/src/entities/dashboard/: dashboard.service.ts  type.ts
web/src/entities/user/: type.ts  user.service.ts
web/src/features/auth/: login.form.tsx  registration.form.tsx
web/src/lib/axios/: axios.config.ts
web/src/lib/zod/: login.schema.ts  registration.schema.ts
web/src/page/: index.ts
web/src/page/auth/: auth.page.tsx  index.ts  login.page.tsx  (+1 more)
(+6 files in other folders)
